<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rect_shape"
    android:orientation="horizontal"
    android:padding="@dimen/widget_margin"
    android:theme="@style/ThemeOverlay.StockWidget.AppWidgetContainer">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="vertical">

        <TextView
            android:id="@+id/stockName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stock_name"
            android:textColor="@color/purple_200"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/stockNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stock_no"
            android:textColor="@color/purple_200"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textColor="@color/teal_700" />

        <TextView
            android:id="@+id/diff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/diff"
            android:textColor="@color/teal_700" />

        <TextView
            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textColor="@color/teal_700" />
    </LinearLayout>
</LinearLayout>